--- a/sites/decalicious-down/maintenance.html
+++ b/sites/decalicious-down/maintenance.html
@@ -8,28 +8,8 @@
 
 </head>
 <body>
-<div id="shim"></div>
-<div id="wrapper">
-	<div class="main_content">
-		<div class="uppersection">
-			<div class="logo"></div>
-			<h2 class="x">Down for Scheduled Maintenance<br>Please Try Again Shortly</h2>
-		</div>
-		<ul class="social">
-			<li><a href="https://www.facebook.com/NutraXen" class="fb">Facebook</a></li>
-			<li><a href="https://twitter.com/NutraXen" class="tw">Twitter</a></li>
-			<li><a href="https://plus.google.com/104530666177105134990/" class="google">Google+</a></li>
-			<li><a href="http://instagram.com/nutraxen" class="insta">Instagram</a></li>
-		</ul>
-	</div>
-</div>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-  ga('create', 'UA-41821637-2', 'nutraxen.com');
-  ga('send', 'pageview');
+<h1>DOWN FOR MAINTENENCE</h1>
+</body>
 </script>
 </body>
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script> 
