--- a/sites/decalicious-down/index.html
+++ b/sites/decalicious-down/index.html
@@ -1,22 +1,91 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>WHY THIS?</title>
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-<link href="xs/css/style.css" rel="stylesheet" type="text/css" />
+<!DOCTYPE HTML>
+<!--[if IE]><![endif]-->
+<!--[if lt IE 7]>      <html lang="en" class="no-js lt-ie10 lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html lang="en" class="no-js msie-7 lt-ie10 lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html lang="en" class="no-js msie-8 lt-ie10 lt-ie9"> <![endif]-->
+<!--[if IE 9]>         <html lang="en" class="no-js msie-9 lt-ie10"> <![endif]-->
+<!--[if gt IE 9]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
+<head prefix= "og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#" >
+
+    <!-- DOCUMENT -->
+    <meta http-equiv="Content-Type"    content="text/html; charset=utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport"              content="width=device-width, initial-scale=1">
+  
+    <!-- SEO -->
+    <title>Unspecified Error - Decalicious</title>
+    <meta name="author"         content="Decalicious.com" >
+    <meta name="robots"         content="noarchive">
+    <meta name="revisit-after"  content="4 hours">
+    <meta name="google"         content="notranslate" />
+    <meta name="description"    content="Custom vinyl decals for your home, vehicle or business.  Quality guaranteed.  Made in the USA and now offering international shipping" >
+    <meta name="keywords"       content="wall decals, wall décor, vinyl decals, custom decals, tree decals, nursery decals, kids room decals, cartoon decals, etsy decals" >
+    <!-- CSS !IMP -->
+    <link rel='stylesheet' href='https://dedkqinqazysj.cloudfront.net/x/s/b/css/b-start.css?v=ep' type='text/css' media='screen'>
+    <style>
+      #CENTER {top:40%; opacity:0}
+      #FOOTER {opacity:0}
+    </style>
+    <!-- SCRIPTS -->
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        ga('create', 'UA-48372601-1',{'alwaysSendReferrer': true});
+        ga('require', 'displayfeatures');
+        ga('send', 'pageview', {'page': '/ERROR/NGINX/INDEX','title': 'Error | Nginx | index.html'});
+    </script>
+    <!-- IE FIXES -->
+    <!--[if lt IE 9]>
+        <script src="https://dedkqinqazysj.cloudfront.net/x/s/g/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://dedkqinqazysj.cloudfront.net/x/s/g/libs/respond.js/1.3.0/respond.js"></script>
+    <![endif]-->
 
 </head>
-<body>
-<h1>HELLO THERE - DECALICIOUS</h1>
-</body>
+<body id="TOP">
+<div id="CENTER">
+    <a href="https://www.facebook.com/DecaliciousCom" title="Official Facebook Page">
+    <img property="logo" id="IMG" src="https://dedkqinqazysj.cloudfront.net/x/s/b/img/decalicious.jpg" width="1000" height="575" alt="Decalicious" border="0"/>
+    </a>
+  </div>
+
+  <div id="FOOTER">
+    <h2>Unspecified Error</h2>
+      <span class="bb">Our Administrators Have Been Notified.</span><span class="bl"><br>Please Try Again In a Few Mintues</span> 
+  </div>
+
+<!-- JQUERY 1.11 / 2.1 WITH FALLBACKS -->
+<!--[if lt IE 9]>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script>
+if(!window.jQuery){document.write('<script src="https://dedkqinqazysj.cloudfront.net/x/s/g/libs/jquery/1.11.0/jquery.min.js"><\/script>');}
+</script>
+<![endif]-->
+<!--[if gte IE 9]><!-->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+<script>
+if(!window.jQuery){document.write('<script src="https://dedkqinqazysj.cloudfront.net/x/s/g/libs/jquery/2.1.0/jquery.min.js"><\/script>');}
+</script>
+<!--<![endif]-->
+<script>
+// https://github.com/carhartl/jquery-cookie 1.4.1 
+(function(e){if(typeof define==="function"&&define.amd){define(["jquery"],e)}else if(typeof exports==="object"){e(require("jquery"))}else{e(jQuery)}})(function(e){function n(e){return u.raw?e:encodeURIComponent(e)}function r(e){return u.raw?e:decodeURIComponent(e)}function i(e){return n(u.json?JSON.stringify(e):String(e))}function s(e){if(e.indexOf('"')===0){e=e.slice(1,-1).replace(/\\"/g,'"').replace(/\\\\/g,"\\")}try{e=decodeURIComponent(e.replace(t," "));return u.json?JSON.parse(e):e}catch(n){}}function o(t,n){var r=u.raw?t:s(t);return e.isFunction(n)?n(r):r}var t=/\+/g;var u=e.cookie=function(t,s,a){if(s!==undefined&&!e.isFunction(s)){a=e.extend({},u.defaults,a);if(typeof a.expires==="number"){var f=a.expires,l=a.expires=new Date;l.setTime(+l+f*864e5)}return document.cookie=[n(t),"=",i(s),a.expires?"; expires="+a.expires.toUTCString():"",a.path?"; path="+a.path:"",a.domain?"; domain="+a.domain:"",a.secure?"; secure":""].join("")}var c=t?undefined:{};var h=document.cookie?document.cookie.split("; "):[];for(var p=0,d=h.length;p<d;p++){var v=h[p].split("=");var m=r(v.shift());var g=v.join("=");if(t&&t===m){c=o(g,s);break}if(!t&&(g=o(g))!==undefined){c[m]=g}}return c};u.defaults={};e.removeCookie=function(t,n){if(e.cookie(t)===undefined){return false}e.cookie(t,"",e.extend({},n,{expires:-1}));return!e.cookie(t)}})
+
+$(function() {
+
+  $("head")
+  .append($("<link rel='stylesheet' href='https://dedkqinqazysj.cloudfront.net/x/s/b/css/b-end.css?v=ep' media='screen' >"))
+  .append($("<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:400,700' type='text/css' media='screen' >"));
+    $("#CENTER").animate({opacity:1, 'top':'50%'},750, function(){
+      $("#FOOTER").animate({opacity:1},1000);
+    });
+  if(typeof $.cookie('engxi') == "undefined") {
+      $.cookie('engxi', 't', {expires:1, path: '/'});
+      var emsg = "NGINX: index.html (UNSPECIFIED) '\n' URL:" + window.location.href + "'\n' REF:" + document.referrer  + "'\n'  BROWSER:" + navigator.userAgent.toLowerCase(); 
+      $.ajax({url: "http://decalicious.com/notify-error.php?msg="+emsg,type:'GET',data:''});            
+  }
+});
 </script>
 </body>
-<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script> 
-<script type="text/javascript" src="xs/js/cufon-yui.js"></script>
-<script type="text/javascript" src="xs/js/Clarendon_LT_Std_700.font.js"></script>
-<script type="text/javascript" src="xs/js/poppy.js"></script>
-<script type="text/javascript">
-  Cufon.replace('.x', {fontFamily: 'Akzidenz-Grotesk BQ'});
-</script>
 </html>
