--- a/sites/decalicious-down/50x.html
+++ b/sites/decalicious-down/50x.html
@@ -44,7 +44,7 @@
 </head>
 <body id="TOP">
 <div id="MIDDLE">
-   <div id="CREEP" class="sh" ><!--<img src="/down/xs/img/nutraxen.png"/>--></div>
+   <div id="CREEP" class="sh" ></div>
 </div>
   <div id="FOOTER">
     <h2>SERVER ERROR 500</h2>
