--- a/sites/decalicious-down/404.html
+++ b/sites/decalicious-down/404.html
@@ -21,7 +21,7 @@
     <meta name="description"    content="Custom vinyl decals for your home, vehicle or business.  Quality guaranteed.  Made in the USA and now offering international shipping" >
     <meta name="keywords"       content="wall decals, wall décor, vinyl decals, custom decals, tree decals, nursery decals, kids room decals, cartoon decals, etsy decals" >
     <!-- CSS !IMP -->
-    <link rel='stylesheet' href='https://dedkqinqazysj.cloudfront.net/x/s/b/css/b-start.css?v=ep' type='text/css' media='screen'>
+    <link rel='stylesheet' href='https://s3.amazonaws.com/decalicious/errors/css/error.css' type='text/css' media='screen'>
     <style>
       #CENTER {top:40%; opacity:0}
       #FOOTER {opacity:0}
@@ -37,10 +37,7 @@
         ga('send', 'pageview', {'page': '/ERROR/NGINX/404','title': 'Error | Nginx | 404.html'});
     </script>
     <!-- IE FIXES -->
-    <!--[if lt IE 9]>
-        <script src="https://dedkqinqazysj.cloudfront.net/x/s/g/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://dedkqinqazysj.cloudfront.net/x/s/g/libs/respond.js/1.3.0/respond.js"></script>
-    <![endif]-->
+
 </head>
 <body id="TOP">
 <div id="CENTER">
@@ -57,9 +54,7 @@
 <!-- JQUERY 1.11 / 2.1 WITH FALLBACKS -->
 <!--[if lt IE 9]>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script>
-if(!window.jQuery){document.write('<script src="https://dedkqinqazysj.cloudfront.net/x/s/g/libs/jquery/1.11.0/jquery.min.js"><\/script>');}
-</script>
+
 <![endif]-->
 <!--[if gte IE 9]><!-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
@@ -72,7 +67,6 @@ if(!window.jQuery){document.write('<script src="https://dedkqinqazysj.cloudfront
 (function(e){if(typeof define==="function"&&define.amd){define(["jquery"],e)}else if(typeof exports==="object"){e(require("jquery"))}else{e(jQuery)}})(function(e){function n(e){return u.raw?e:encodeURIComponent(e)}function r(e){return u.raw?e:decodeURIComponent(e)}function i(e){return n(u.json?JSON.stringify(e):String(e))}function s(e){if(e.indexOf('"')===0){e=e.slice(1,-1).replace(/\\"/g,'"').replace(/\\\\/g,"\\")}try{e=decodeURIComponent(e.replace(t," "));return u.json?JSON.parse(e):e}catch(n){}}function o(t,n){var r=u.raw?t:s(t);return e.isFunction(n)?n(r):r}var t=/\+/g;var u=e.cookie=function(t,s,a){if(s!==undefined&&!e.isFunction(s)){a=e.extend({},u.defaults,a);if(typeof a.expires==="number"){var f=a.expires,l=a.expires=new Date;l.setTime(+l+f*864e5)}return document.cookie=[n(t),"=",i(s),a.expires?"; expires="+a.expires.toUTCString():"",a.path?"; path="+a.path:"",a.domain?"; domain="+a.domain:"",a.secure?"; secure":""].join("")}var c=t?undefined:{};var h=document.cookie?document.cookie.split("; "):[];for(var p=0,d=h.length;p<d;p++){var v=h[p].split("=");var m=r(v.shift());var g=v.join("=");if(t&&t===m){c=o(g,s);break}if(!t&&(g=o(g))!==undefined){c[m]=g}}return c};u.defaults={};e.removeCookie=function(t,n){if(e.cookie(t)===undefined){return false}e.cookie(t,"",e.extend({},n,{expires:-1}));return!e.cookie(t)}})
 $(function() {
   $("head")
-  .append($("<link rel='stylesheet' href='https://dedkqinqazysj.cloudfront.net/x/s/b/css/b-end.css?v=ep' media='screen' >"))
   .append($("<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:400,700' type='text/css' media='screen' >"));
     $("#CENTER").animate({opacity:1, 'top':'50%'},750, function(){
       $("#FOOTER").animate({opacity:1},1000);
