--- a/sites/decalicious-down/error.html
+++ b/sites/decalicious-down/error.html
@@ -21,7 +21,7 @@
     <meta name="description"    content="Custom vinyl decals for your home, vehicle or business.  Quality guaranteed.  Made in the USA and now offering international shipping" >
     <meta name="keywords"       content="wall decals, wall décor, vinyl decals, custom decals, tree decals, nursery decals, kids room decals, cartoon decals, etsy decals" >
     <!-- CSS !IMP -->
-    <link rel='stylesheet' href='https://dedkqinqazysj.cloudfront.net/x/s/b/css/b-start.css?v=ep' type='text/css' media='screen'>
+    <link rel='stylesheet' href='https://s3.amazonaws.com/decalicious/errors/css/error.css' type='text/css' media='screen'>
     <style>
     #TOP {background-color:#151515;}
     #FOOTER {opacity: 0}
@@ -36,11 +36,7 @@
         ga('require', 'displayfeatures');
         ga('send', 'pageview', {'page': '/ERROR/NGINX/ERROR','title': 'Error | Nginx | error.html'});
     </script>
-    <!-- IE FIXES -->
-    <!--[if lt IE 9]>
-        <script src="https://dedkqinqazysj.cloudfront.net/x/s/g/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://dedkqinqazysj.cloudfront.net/x/s/g/libs/respond.js/1.3.0/respond.js"></script>
-    <![endif]-->
+
 </head>
 <body id="TOP">
 <div id="MIDDLE">
@@ -54,9 +50,7 @@
 <!-- JQUERY 1.11 / 2.1 WITH FALLBACKS -->
 <!--[if lt IE 9]>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script>
-if(!window.jQuery){document.write('<script src="https://dedkqinqazysj.cloudfront.net/x/s/g/libs/jquery/1.11.0/jquery.min.js"><\/script>');}
-</script>
+
 <![endif]-->
 <!--[if gte IE 9]><!-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
@@ -71,7 +65,6 @@ $(function() {
   var random = Math.floor(Math.random()*15) + 1;
   $("#CREEP").css({'background-image': 'url(https://dedkqinqazysj.cloudfront.net/x/s3/errors/'+ random + '.gif)'})
   $("head")
-  .append($("<link rel='stylesheet' href='https://dedkqinqazysj.cloudfront.net/x/s/b/css/b-end.css?v=ep' media='screen' >"))
   .append($("<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:400,700' type='text/css' media='screen' >"));
   $("#MIDDLE").delay(100).animate({opacity:.95, 'top':'50%'},800, function(){
         $("#FOOTER").animate({opacity:1},1000);
