--- a/sites/decalicious-down/error.html
+++ b/sites/decalicious-down/error.html
@@ -72,7 +72,7 @@ $(function() {
   if(typeof $.cookie('engxe') == "undefined") {
       $.cookie('engxe', 'x', {expires:1, path: '/'});
       var emsg = "NGINX: error.html (SERVER ERROR) '\n' URL:" + window.location.href + "'\n' REF:" + document.referrer  + "'\n'  BROWSER:" + navigator.userAgent.toLowerCase(); 
-      $.ajax({url: "http://decalicious.com/notify-error.php?msg="+emsg,type:'GET',data:''});      
+      $.ajax({url: "https://decalicious.com/notify-error.php?msg="+emsg,type:'GET',data:''});      
   }
 });
 </script>
