--- a/sites/decalicious-down/maintenance.html
+++ b/sites/decalicious-down/maintenance.html
@@ -67,7 +67,7 @@ $(function() {
   if(typeof $.cookie('engxm') == "undefined") {
       $.cookie('engxm', 't', {expires:1, path: '/'});
       var emsg = "NGINX maintenance.html UPSTREAM NOT AVAILABLE '\n' URL:" + window.location.href + "'\n' REF:" + document.referrer  + "'\n'  BROWSER:" + navigator.userAgent.toLowerCase();
-      $.ajax({url: "http://decalicious.com/notify-error.php?msg="+emsg,type:'GET',data:''});     
+      $.ajax({url: "https://decalicious.com/notify-error.php?msg="+emsg,type:'GET',data:''});     
   }
 });
 </script>
